force-app/main/default/objects/ACR2__c/ACR2__c.object-meta.xml
<CustomObject>
    <description>fff</description>
    <label>ACR2</label>
    <nameField>
        <label>ACR2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACR2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>