force-app/main/default/objects/ACR2__c/fields/field1__c.field-meta.xml
<CustomField>
    <fullName>field1__c</fullName>
    <label>field1</label>
    <length>7</length>
    <type>Text</type>
</CustomField>