force-app/main/default/objects/ACR2__c/fields/field2__c.field-meta.xml
<CustomField>
    <fullName>field2__c</fullName>
    <label>field2</label>
    <type>Phone</type>
</CustomField>