force-app/main/default/objects/ACR2__c/fields/LookUpField1__c.field-meta.xml
<CustomField>
    <fullName>LookUpField1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LookUpField1</label>
    <referenceTo>ACR3__c</referenceTo>
    <relationshipLabel>ACR2s</relationshipLabel>
    <relationshipName>ACR2s</relationshipName>
    <type>Lookup</type>
</CustomField>