force-app/main/default/objects/ACR2__c/fields/LookUpField2__c.field-meta.xml
<CustomField>
    <fullName>LookUpField2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LookUpField2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ACR2s</relationshipLabel>
    <relationshipName>ACR2s</relationshipName>
    <type>Lookup</type>
</CustomField>